<resources>
    <string name="app_name">Daily Standup</string>
    <string name="profile_picture_content_description">This person\'s profile picture</string>
    <string name="resetted_timer">0:00</string>
    <string name="call_next_label">Call Next!</string>
    <string name="tasks_label">Tasks</string>
    <string name="skip_label">Skip</string>
    <string name="leave_meeting_label">Leave meeting</string>
    <string name="talked_label">Talked</string>
    <string name="skipped_label">Skipped</string>
    <string name="bring_back_label">Bring back</string>
    <string name="skipped_none_label">No one has been skipped during this meeting yet.</string>
    <string name="end_meeting_hyphen_label">End Meeting!</string>
    <string name="end_meeting_label">End Meeting</string>
    <string name="call_ended_label">Everyone has spoken!</string>
    <string name="collapse_or_expand_overlay_content_description">Collapse or expand overlay</string>
    <string name="view_statistics_button">View statistics</string>
    <string name="popper_icon_content_description">Popper party icon</string>
    <string name="meeting_screen_label">Meeting Screen</string>
    <string name="view_more_label">%d more</string>
</resources>