<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/cardview_dark_background"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="0dp"
            android:layout_height="0dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:animateLayoutChanges="true"
                android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                    android:id="@+id/finished_card_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    tools:visibility="visible"
                    android:visibility="gone"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/recycler_view_active"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                                android:id="@+id/party_popper_image"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginBottom="5dp"
                                android:contentDescription="@string/popper_icon_content_description"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintBottom_toTopOf="@id/finished_title"
                                app:srcCompat="@drawable/ic_party_popper"/>

                    <TextView
                            android:id="@+id/finished_title"
                            style="@style/TextAppearance.MaterialComponents.Headline4"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="28sp"
                            android:text="@string/call_ended_label"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/party_popper_image"
                            app:layout_constraintBottom_toTopOf="@id/view_statistics_button"/>

                    <Button
                            android:id="@+id/view_statistics_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/view_statistics_button"

                            app:layout_constraintTop_toBottomOf="@id/finished_title"
                            app:layout_constraintBottom_toTopOf="@id/end_meeting_button"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                        />

                    <Button
                            android:id="@+id/end_meeting_button"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="10dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="40dp"
                            android:text="@string/end_meeting_label"

                            app:layout_constraintTop_toBottomOf="@id/view_statistics_button"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="@id/view_statistics_button"
                            app:layout_constraintEnd_toEndOf="@id/view_statistics_button"
                            />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_active"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    tools:itemCount="4"
                    tools:listitem="@layout/layout_person"
                    tools:spanCount="2"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/finished_card_view"
                    app:layout_constraintBottom_toTopOf="@id/talked_label" />

            <TextView
                    android:id="@+id/talked_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/talked_label"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_active"
                    app:layout_constraintBottom_toTopOf="@id/talked_divider" />

            <View
                    android:id="@+id/talked_divider"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@android:color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:visibility="gone"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/talked_label"
                    app:layout_constraintBottom_toTopOf="@id/recycler_view_talked" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_talked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    tools:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/talked_divider"
                    app:layout_constraintBottom_toTopOf="@id/skipped_label" />

            <TextView
                    android:id="@+id/skipped_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/skipped_label"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_talked"
                    app:layout_constraintBottom_toTopOf="@id/skipped_divider" />

            <View
                    android:id="@+id/skipped_divider"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@android:color/black"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/skipped_label"
                    app:layout_constraintBottom_toTopOf="@id/recycler_view_talked" />

            <TextView
                    android:id="@+id/no_skipped_users"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:visibility="gone"
                    android:text="@string/skipped_none_label"
                    tools:visibility="visible"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintStart_toStartOf="@id/recycler_view_skipped"
                    app:layout_constraintEnd_toEndOf="@id/recycler_view_skipped"
                    app:layout_constraintTop_toTopOf="@id/recycler_view_skipped"
                    app:layout_constraintBottom_toBottomOf="@id/recycler_view_skipped" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_skipped"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="60dp"
                    android:orientation="horizontal"
                    tools:visibility="invisible"
                    app:layout_constraintHeight_min="@dimen/item_size_circa"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/skipped_divider"
                    app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/overlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintBottom_toBottomOf="parent">

        <View
                android:id="@+id/line_top"
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:background="@android:color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/leave_meeting_button"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed" />

        <ImageButton
                android:id="@+id/collapse_overlay_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:foreground="?attr/selectableItemBackground"
                android:contentDescription="@string/collapse_or_expand_overlay_content_description"
                app:layout_constraintTop_toTopOf="@id/timer"
                app:layout_constraintStart_toEndOf="@id/hourglass_icon"
                app:layout_constraintEnd_toEndOf="@id/leave_meeting_button"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintBottom_toBottomOf="@id/timer"
                app:srcCompat="@drawable/ic_baseline_keyboard_arrow_down_24" />

        <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/resetted_timer"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintVertical_weight="1"
                app:layout_constraintTop_toBottomOf="@id/line_top"
                app:layout_constraintBottom_toTopOf="@id/leave_meeting_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@id/hourglass_icon" />

        <ImageView
                android:id="@+id/hourglass_icon"
                android:layout_width="@dimen/dimen_tooltip_icon"
                android:layout_height="0dp"
                android:contentDescription="@string/profile_picture_content_description"
                app:srcCompat="@drawable/ic_hourglass"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/timer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/timer"
                app:layout_constraintBottom_toBottomOf="@id/timer" />

        <Button
                android:id="@+id/leave_meeting_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/leave_meeting_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/timer"
                app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>