<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"

        app:cardCornerRadius="20dp"
        app:cardElevation="3dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/profile_picture"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/profile_picture_content_description"
                tools:srcCompat="@mipmap/download"

                app:layout_constraintHeight_max="@dimen/profile_picture_meet_size"
                app:layout_constraintWidth_max="@dimen/profile_picture_meet_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_weight="0.3"
                app:layout_constraintBottom_toTopOf="@id/title" />

        <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:autoSizeMaxTextSize="16sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:ellipsize="end"
                android:maxLines="2"

                tools:text="Person Name"

                app:layout_constraintTop_toBottomOf="@id/profile_picture"
                app:layout_constraintVertical_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline" />

        <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                tools:text="Frontend"
                android:textSize="13sp"
                app:layout_constraintVertical_weight="1"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline" />

        <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/resetted_timer"
                android:textSize="13sp"
                app:layout_constraintVertical_weight="1"
                app:layout_constraintTop_toBottomOf="@id/subtitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/hourglass_icon"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintVertical_bias="1.0" />

        <ImageView
                android:id="@+id/hourglass_icon"
                android:layout_width="@dimen/dimen_tooltip_icon"
                android:layout_height="0dp"
                android:contentDescription="@string/profile_picture_content_description"
                app:srcCompat="@drawable/ic_hourglass"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@id/timer"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="@id/timer"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintBottom_toBottomOf="@id/timer" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        <Button
                android:id="@+id/skip_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                tools:text="@string/skip_label"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tasks_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

        <Button
                android:id="@+id/next_end_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                tools:text="@string/call_next_label"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tasks_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="parent" />

        <Button
                android:id="@+id/tasks_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"

                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                tools:text="@string/tasks_label"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/skip_button"
                app:layout_constraintBottom_toTopOf="@id/next_end_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>